--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
+    "mongoose": "^8.3.4",
     "morgan": "^1.10.0",
     "socket.io": "^4.7.5"
   }
