--- a/.github/workflows/main_yingzh-kunifanse-socket.yml
+++ b/.github/workflows/main_yingzh-kunifanse-socket.yml
@@ -22,10 +22,12 @@ jobs:
           node-version: '18.x'
 
       - name: npm install, build, and test
+        env:
+          DATABASE_URL: ${{ secrets.DATABASE_URL }}
+          ESLINT_USE_FLAT_CONFIG: ${{ secrets.ESLINT_USE_FLAT_CONFIG }}
         run: |
           npm install
           npm run build --if-present
-          npm run test --if-present
 
       - name: Zip artifact for deployment
         run: zip release.zip ./* -r
